--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -1,10 +1,10 @@
-<%= form_for(@location) do |f| %>
-  <% if @location.errors.any? %>
+<%= form_for(@event) do |f| %>
+  <% if @event.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(@location.errors.count, "error") %> prohibited this location from being saved:</h2>
+      <h2><%= pluralize(@event.errors.count, "error") %> prohibited this event from being saved:</h2>
 
       <ul>
-      <% @location.errors.full_messages.each do |msg| %>
+      <% @event.errors.full_messages.each do |msg| %>
         <li><%= msg %></li>
       <% end %>
       </ul>
@@ -16,6 +16,10 @@
     <%= f.text_field :name %>
   </div>
   <div class="field">
+    <%= f.label :user_id %><br />
+    <%= f.number_field :user_id %>
+  </div>
+  <div class="field">
     <%= f.label :latitude %><br />
     <%= f.text_field :latitude %>
   </div>
@@ -24,8 +28,12 @@
     <%= f.text_field :longitude %>
   </div>
   <div class="field">
-    <%= f.label :user_id %><br />
-    <%= f.number_field :user_id %>
+    <%= f.label :startdatetime %><br />
+    <%= f.datetime_select :startdatetime %>
+  </div>
+  <div class="field">
+    <%= f.label :enddatetime %><br />
+    <%= f.datetime_select :enddatetime %>
   </div>
   <div class="actions">
     <%= f.submit %>
